exploring js script, small nonplus changes

--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,8 @@
       "matches": ["http://*/*", "https://*/*"],
       "js": ["myScript.js"]
     }
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"]
+  }
 }
