--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "coinbase": "^2.0.6",
     "express": "^4.16.2",
     "fluture": "^7.2.2",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "request": "^2.85.0",
+    "root-require": "^0.3.1"
   }
 }
