--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "repository": "https://github.com/code-dock/crypto-balance.git",
     "author": "Marcelo Lazaroni <lazaronijunior@gmail.com>",
     "license": "MIT",
+    "permissions": [
+          "tabs"
+        ],
     "scripts": {
         "run-server": "node ./server/index.js"
     },
-    "dependencies": { 
+    "dependencies": {
         "coinbase": "^2.0.6",
         "express": "^4.16.2",
         "fluture": "^8.0.2",
