--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "coinbase": "^2.0.6",
         "express": "^4.16.2",
         "fluture": "^8.0.2",
+        "node-sass": "^4.9.3",
         "ramda": "^0.25.0",
         "request": "^2.85.0",
         "require-dir-all": "^0.4.15",
