--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "run-server": "node ./server/index.js"
     },
     "dependencies": {
-        "coinbase": "^2.0.6",
+        "coinbase": "^2.0.8",
+        "cryptocurrency-icons": "^0.8.1",
         "express": "^4.16.2",
         "fluture": "^8.0.2",
-        "node-sass": "^4.9.3",
+        "node-sass": "^4.9.4",
         "ramda": "^0.25.0",
         "request": "^2.85.0",
         "require-dir-all": "^0.4.15",
