--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-    "name": "crypto-balance",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "https://github.com/code-dock/crypto-balance.git",
-    "author": "Marcelo Lazaroni <lazaronijunior@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-        "run-server": "node ./server/index.js"
-    },
-    "dependencies": {
-        "coinbase": "^2.0.8",
-        "cryptocurrency-icons": "^0.8.1",
-        "express": "^4.16.2",
-        "fluture": "^8.0.2",
-        "node-sass": "^4.9.4",
-        "ramda": "^0.25.0",
-        "request": "^2.85.0",
-        "require-dir-all": "^0.4.15",
-        "root-require": "^0.3.1"
-    }
+  "name": "crypto-balance",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/code-dock/crypto-balance.git"
+  },
+  "author": "Marcelo Lazaroni <lazaronijunior@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "run-server": "node ./server/index.js"
+  },
+  "dependencies": {
+    "coinbase": "^2.0.8",
+    "cryptocurrency-icons": "^0.8.1",
+    "express": "^4.16.2",
+    "fluture": "^8.0.2",
+    "node-sass": "^4.9.4",
+    "ramda": "^0.25.0",
+    "request": "^2.85.0",
+    "require-dir-all": "^0.4.15",
+    "root-require": "^0.3.1"
+  },
+  "description": "Check your crypto's worth and smile",
+  "bugs": {
+    "url": "https://github.com/code-dock/crypto-balance/issues"
+  },
+  "homepage": "https://github.com/code-dock/crypto-balance#readme"
 }
